--- a/students/fiona-lapham.html
+++ b/students/fiona-lapham.html
@@ -19,7 +19,7 @@
         <div class="profile-photo" id="fiona-lapham-card"></div>
         <div class="social-icon-container">
           <a href="https://twitter.com/fiona4661"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="http://www.linkedin.com/in/vudiane"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="http://www.linkedin.com//in/fiona-lapham-a31776110"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="http://www.github.com/fionadl"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <!--<a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>-->
         </div>
